--- a/front-end/readable/src/App.css
+++ b/front-end/readable/src/App.css
@@ -1,3 +1,17 @@
 .app-navbar {
     background-color: black !important;
 }
+
+.app-new-category-modal {
+    width: 50%;
+    height: 50%;
+    overflow: auto;
+    margin: auto;
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    bottom: 0; 
+    right: 0;
+    background-color: white;
+    padding: 2em;
+}
