feat: Added progress indicator when posts is undefined

--- a/front-end/readable/src/App.css
+++ b/front-end/readable/src/App.css
@@ -15,3 +15,14 @@
     background-color: white;
     padding: 2em;
 }
+
+.app-circular-progress {
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 15em;
+    height: 7em;
+}
