--- a/front-end/readable/src/App.css
+++ b/front-end/readable/src/App.css
@@ -26,3 +26,8 @@
     width: 15em;
     height: 7em;
 }
+
+.app-jumbotron {
+    padding-bottom: 150px;
+    box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
+}
