feat: Made lists of categories and posts into a horizontal list

--- a/front-end/readable/src/App.css
+++ b/front-end/readable/src/App.css
@@ -31,3 +31,9 @@
     padding-bottom: 150px;
     box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
 }
+
+.app-flex-container {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+}
