fix: Fixed bug with fetching initial data twice

--- a/front-end/readable/src/App.css
+++ b/front-end/readable/src/App.css
@@ -37,3 +37,13 @@
     flex-direction: row;
     padding: 0;
 }
+
+ul {
+    list-style-type: none;
+}
+
+.app-link {
+    text-decoration: none;
+    color: inherit;
+}
+  
