feat: Added non-functional modal for editing post details

--- a/front-end/readable/src/App.css
+++ b/front-end/readable/src/App.css
@@ -2,7 +2,7 @@
     background-color: black !important;
 }
 
-.app-new-category-modal {
+.app-modal {
     width: 50%;
     height: 50%;
     overflow: auto;
